<resources>
    <string name="app_name">Project 1</string>
    <string name="title_activity_add_class">Add Class</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_view_contact">View Contact</string>
    <string name="add_contact">New Contact</string>
    <string name="class_name">Class Name:</string>
    <string name="class_number">Class Number:</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="contact_name">Name:</string>
    <string name="email_address">Email:</string>
    <string name="contact_class">Class:</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back_button">Back</string>
    <string name="title_activity_search_contacts">SearchContacts</string>
</resources>
